--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "3abdf20a",
    "metadata": {},
    "outputs": [
@@ -327,25 +327,26 @@
        "[10646 rows x 16 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chapman = pd.read_excel(\"../data/chapman/Diagnostics.xlsx\")\n",
+    "chapman = pd.read_excel(\"data/chapman/Diagnostics.xlsx\")\n",
     "chapman"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "3c2992e0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "Rhythm\n",
        "SB       3889\n",
        "SR       1826\n",
        "AFIB     1780\n",
@@ -357,10 +358,10 @@
        "AVNRT      16\n",
        "AVRT        8\n",
        "SAAWR       7\n",
-       "Name: Rhythm, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "395fdd6b",
    "metadata": {},
    "outputs": [
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "188b748a",
    "metadata": {},
    "outputs": [],
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "5a7e7984",
    "metadata": {},
    "outputs": [
@@ -484,7 +485,7 @@
        "4  MUSE_20180112_122850_57000     AF   73  FEMALE"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "61c3ff4a",
    "metadata": {},
    "outputs": [
@@ -505,7 +506,7 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,13 +518,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "e1d12136",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "rhythm\n",
        "SB       3889\n",
        "SR       1826\n",
        "AFIB     1780\n",
@@ -535,10 +537,10 @@
        "AVNRT      16\n",
        "AVRT        8\n",
        "SAAWR       7\n",
-       "Name: rhythm, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,13 +551,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "4caf915d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "rhythm\n",
        "SB       3889\n",
        "SR       1826\n",
        "AFIB     1780\n",
@@ -567,10 +570,10 @@
        "AVNRT      16\n",
        "AVRT        8\n",
        "SAAWR       7\n",
-       "Name: rhythm, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "6bcbab98",
    "metadata": {},
    "outputs": [],
@@ -610,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "97fe55a1",
    "metadata": {},
    "outputs": [],
@@ -639,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "b284b97e",
    "metadata": {},
    "outputs": [],
@@ -687,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "56f7589d",
    "metadata": {},
    "outputs": [],
@@ -12605,7 +12608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
